# pager-cli-client

./: README.md  pyproject.toml
src/: client.py  config.py  http_requests.py  message.py
